icm-macros/testing/unpack/errors/EachOnStruct.sol
pragma solidity ^0.8.30;

// #[unpack(assert = "|each x| { x > 0 }")]
struct HasEachAssert {
    uint256 value;
}